--- a/trunk/SelectAccount/res/values/strings.xml
+++ b/trunk/SelectAccount/res/values/strings.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, SelectAccount!</string>
     <string name="app_name">SelectAccount</string>
+    <!-- dialog -->
+    <string name="create_account_prompt">Create account?</string>
+    <string name="yes_label">Yes</string>
+    <string name="cancel_label">Cancel</string>
     <!-- preference key -->
     <string name="default_account_key">default_account</string>
 </resources>
